--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Converter</title>
+        <title>Weight Converter</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -59,3 +59,43 @@
                         </div>
                     </div>
                 </form>
+                <div id="result">
+                    <div class="card card-warning">
+                        <div class="card-block">
+                            <div><h2 id="gramsResult" class="text-lg-center"></h2></div>
+                            <h5 class="text-right text-white">Grams</h5>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="card card-primary">
+                        <div class="card-block">
+                            <div><h2 id="kgResult" class="text-lg-center"></h2></div>
+                            <h5 class="text-right text-white">kilograms</h5>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="card card-success">
+                        <div class="card-block">
+                            <div><h2 id="ounceResult" class="text-lg-center"></h2></div>
+                            <h5 class="text-right text-white">Ounces</h5>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="card card-danger">
+                        <div class="card-block">
+                            <div><h2 id="poundsResult" class="text-lg-center"></h2></div>
+                            <h5 class="text-right text-white">Pounds</h5>
+                        </div>
+                    </div>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+    <script src="/assets/js/main.js"></script>
+    </body>
+</html>
